# Maneru

./: CMakeLists.txt  LICENSE  Maneru.rc  README.en.md  README.md  Readme.txt  cc.cpp  cc.h  config.cpp  config.h  game.cpp  game.h  graphic.cpp  graphic.h  input.cpp  input.h  main.cpp  maneru.config  resource.h
